--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ python:
   - "3.7"
 cache: pip
 install:
-  - pip install pipenv
+  - pip install -r requirements.txt
 script:
-  - pipenv install
-  - pipenv shell 
   - bash install_and_run.sh
