--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+autopep8 = "*"
 
 [packages]
 dask = {extras = ["complete"],version = "*"}
@@ -15,6 +16,7 @@ dill = "*"
 jupyter = "*"
 ipykernel = "*"
 pytest = "*"
+pycodestyle = "*"
 
 [requires]
 python_version = "3.7"
