--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
--i https://pypi.org/simple
 atomicwrites==1.3.0
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
 bokeh==1.3.4
-click==7.0
+Click==7.0
 cloudpickle==1.2.1
-dask[complete]==2.2.0
+dask==2.2.0
 decorator==4.4.0
 defusedxml==0.6.0
 dill==0.3.0
@@ -15,21 +14,21 @@ entrypoints==0.3
 fsspec==0.4.1
 graphviz==0.11.1
 h5py==2.9.0
-heapdict==1.0.0
+HeapDict==1.0.0
 importlib-metadata==0.19
 ipykernel==5.1.2
+ipython==7.7.0
 ipython-genutils==0.2.0
-ipython==7.7.0 ; python_version >= '3.3'
 ipywidgets==7.5.1
 jedi==0.15.1
-jinja2==2.10.1
+Jinja2==2.10.1
 jsonschema==3.0.2
+jupyter==1.0.0
 jupyter-client==5.3.1
 jupyter-console==6.0.0
 jupyter-core==4.5.0
-jupyter==1.0.0
 locket==0.2.0
-markupsafe==1.1.1
+MarkupSafe==1.1.1
 mistune==0.8.4
 more-itertools==7.2.0
 msgpack==0.6.1
@@ -42,25 +41,26 @@ pandas==0.25.0
 pandocfilters==1.4.2
 parso==0.5.1
 partd==1.0.0
-pexpect==4.7.0 ; sys_platform != 'win32'
+pexpect==4.7.0
 pickleshare==0.7.5
-pillow==6.1.0
+Pillow==6.1.0
 pluggy==0.12.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
 psutil==5.6.3
-ptyprocess==0.6.0 ; os_name != 'nt'
+ptyprocess==0.6.0
 py==1.8.0
-pygments==2.4.2
+pycodestyle==2.5.0
+Pygments==2.4.2
 pyparsing==2.4.2
 pyrsistent==0.15.4
 pytest==5.0.1
 python-dateutil==2.8.0
 pytz==2019.2
-pyyaml==5.1.2
+PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.2
-send2trash==1.5.0
+Send2Trash==1.5.0
 six==1.12.0
 sortedcontainers==2.1.0
 tblib==1.4.0
