--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /notebooks
 /scripts/scripts_perso
 /data
+/benchmarks/outputs
+/tests/outputs
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
